Fix text-alignment for Leaderboard and Game Over phases, change Return Home anchor tag to button.

--- a/src/app/host/host.component.css
+++ b/src/app/host/host.component.css
@@ -255,11 +255,10 @@
 
 
 /*Styling for leaderboard phase*/
-.leaderboard {
+.leaderboard, .GameOver{
   text-align: center;
   font-family: 'Acme', sans-serif;
   font-size: 24px;
-  text-align: center;
 }
 
 .leaderboard-nextqs-btn {
